# cpp_notes

Modern-CMake-for-Cpp-2E-main/Modern-CMake-for-Cpp-2E-main/: README.md
The-CPP-Programmers-Mindset-main/Chapter-01/: recursive_word.cpp
The-CPP-Programmers-Mindset-main/Chapter-02/: CMakeLists.txt  address_book_record.cpp  conversion_traits.hpp  expanding_search_range.hpp  function_with_noise.hpp  intensity_grid_search.cpp  summary_statistics.cpp  temperature_sensors.hpp  test_temperature_sensors.cpp
The-CPP-Programmers-Mindset-main/Chapter-03/: powers.hpp  quick_sort.hpp
The-CPP-Programmers-Mindset-main/Chapter-04/: CMakeLists.txt  bench_nearest_neighbor.cpp  clamp_loop.h  gemm.cpp  open_mp_demo.cpp  saxpy.cpp  saxpy.h  test_gemm.cpp
The-CPP-Programmers-Mindset-main/Chapter-05/: bench_container_insert.cpp  bench_container_traversal.cpp  bench_map_random_access.cpp
The-CPP-Programmers-Mindset-main/Chapter-06/: CMakeLists.txt  exported_fns.cpp  library.cpp
The-CPP-Programmers-Mindset-main/Chapter-06/ctode/rk4/: rk4.cpp
The-CPP-Programmers-Mindset-main/Chapter-09/: CMakeLists.txt
The-CPP-Programmers-Mindset-main/Chapter-09/readers/: csv_reader.cpp
The-CPP-Programmers-Mindset-main/Chapter-11/clustering/: kmeans.h
The-CPP-Programmers-Mindset-main/Chapter-11/readers/: csv_reader.h
The-CPP-Programmers-Mindset-main/Chapter-12/: main.cpp
The-CPP-Programmers-Mindset-main/Chapter-12/clustering/: clustering.cpp  clustering.h
The-CPP-Programmers-Mindset-main/Chapter-12/common/: duckies_types.h
The-CPP-Programmers-Mindset-main/Chapter-12/readers/: file_reader.cpp
The-CPP-Programmers-Mindset-main/Chapter-13/: caching_function.hpp  task.hpp
The-CPP-Programmers-Mindset-main/Chapter-14/: matmul.cuh  sycl_saxpy.cpp  test_sycl_saxpy.cpp
The-CPP-Programmers-Mindset-main/Chapter-15/: bench_outer_product.cpp
c/: NoteGPT_TRANSCRIPT_Advanced C The UB and optimizations that trick good programmers.txt  NoteGPT_TRANSCRIPT_Architecting LARGE software projects.txt  NoteGPT_TRANSCRIPT_Debugging  and the art of avoiding bugs.txt  NoteGPT_TRANSCRIPT_How I program C.txt
cpp/The-CPP-Programmers-Mindset-main/: README.md
cpp/The-CPP-Programmers-Mindset-main/Chapter-01/: CMakeLists.txt  max_element.hpp  recursive_word.hpp  test_max_element.cpp  test_recursive_word.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-02/: Exercises.md  address_book_record.hpp  concrete_temperature_sensor.cpp  concrete_temperature_sensor.hpp  expanding_search_range.cpp  find_root.hpp  intensity_grid_search.hpp  signal_intensity.cpp  signal_intensity.hpp  summary_statistics.hpp  temperature_sensors.cpp  test_find_root.cpp  test_function_with_noise.cpp  test_signal_intensity.cpp  test_summary_statistics.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-03/: CMakeLists.txt  Exercises.md  Solutions.md  test_powers.cpp  test_quick_sort.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-04/: bench_clamp_loop.cpp  bench_gemm.cpp  bench_saxpy.cpp  cache_information.cpp  clamp_loop.cpp  gemm.h  get_best_instructions.h  matrix.h  matrix_view.h  my_cpuid.h  nearest_neighbor.cpp  nearest_neighbor.h  page_size_report.cpp  saxpy.cpp.in  saxpy_hand.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-05/: CMakeLists.txt  bench_containers.h  benchmark_hash.cpp  vcpkg.json
cpp/The-CPP-Programmers-Mindset-main/Chapter-06/: library.h  module_example.ixx
cpp/The-CPP-Programmers-Mindset-main/Chapter-06/ctode/: CMakeLists.txt  ctode.cpp  ctode.h
cpp/The-CPP-Programmers-Mindset-main/Chapter-06/ctode/euler/: CMakeLists.txt  euler.cpp  euler.h
cpp/The-CPP-Programmers-Mindset-main/Chapter-06/ctode/rk4/: CMakeLists.txt  rk4.h
cpp/The-CPP-Programmers-Mindset-main/Chapter-07/: CMakeLists.txt
cpp/The-CPP-Programmers-Mindset-main/Chapter-08/: CMakeLists.txt  main.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-09/common/: CMakeLists.txt
cpp/The-CPP-Programmers-Mindset-main/Chapter-09/readers/: CMakeLists.txt  file_reader.cpp  json_reader.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-10/clustering/: clustering.h
cpp/The-CPP-Programmers-Mindset-main/Chapter-10/readers/: file_reader.h  free_reader.h  json_reader.h  test_csv_reader.cpp  test_json_reader.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-11/: CMakeLists.txt  main.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-11/clustering/: CMakeLists.txt  test_clustering.cpp  test_coord3.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-11/readers/: CMakeLists.txt  csv_reader.cpp  free_reader.cpp  test_free_reader.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-12/: CMakeLists.txt  vcpkg.json
cpp/The-CPP-Programmers-Mindset-main/Chapter-12/clustering/: CMakeLists.txt  coord3.cpp  coord3.h  develop_clustering.cpp  kmeans.cpp  test_kmeans.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-13/: CMakeLists.txt  byte_order.cpp  main.cpp
cpp/The-CPP-Programmers-Mindset-main/Chapter-14/: CMakeLists.txt  bench_matmul.cu  bench_saxpy.cu  main.cu  matmul.cu  saxpy.cu  saxpy.cuh  saxpy_mt.cpp  saxpy_mt.hpp  sycl_saxy.hpp  test_matmul.cu
cpp/The-CPP-Programmers-Mindset-main/Chapter-15/: CMakeLists.txt
cpp/intro_cpp/: NoteGPT_TRANSCRIPT_Getting started with c++.txt  NoteGPT_TRANSCRIPT_Linear algebra and quantum chaos in C++.txt  NoteGPT_TRANSCRIPT_Operators, if statements and loops in c++.txt  NoteGPT_TRANSCRIPT_Parallel computing in C++ OpenMP.txt  proj06.cpp  proj07.cpp
cpp/scientific_computing_c++/: light_source.cpp
intro_cpp/: NoteGPT_TRANSCRIPT_Calculating Pi in c++.txt
scientific_computing_c++/: bmr_calculator.cpp  bmr_calculator.h  bmr_cli.cpp  light_efficiency_analyzer.cpp  light_source.h
